feat: init starter template

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>OOZE Demo</title>
+	</head>
+	<body>
+		<header class="header-demo">
+			<div class="header-demo__wrapper">
+				<h1 class="h1-demo">OOZE <span>Demo</span></h1>
+				<canvas id="ooze"></canvas>
+			</div>
+		</header>
+		<script type="module" src="/src/scripts/main.ts"></script>
+	</body>
 </html>
