refactor: add class for control waves

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 				wavePoints[1].forEach((point) => (point.baseY -= 140));
 				wavePoints[2].forEach((point) => (point.baseY -= 280));
+
+				console.log(wavePoints);
 			}
 			createWaves();
 
